<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c10"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvinput"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner"
        android:gravity="end|bottom"
        android:padding="20dp"
        android:text="@string/cal_text"
        android:textColor="@color/c4"
        android:textSize="60dp"
        app:backgroundTint="@null" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:layout_margin="3dp"
            android:text="@string/_7"
            android:onClick="ondigit"
            android:background="@drawable/button_round"
            app:backgroundTint="@null"
            android:layout_weight="1"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_8"
                android:textSize="40dp"
                android:layout_margin="3dp"
                android:onClick="ondigit"
                app:backgroundTint="@null"
                android:background="@drawable/button_round"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="40dp"
                android:text="@string/_9"
                android:background="@drawable/button_round"
                android:onClick="ondigit"
                app:backgroundTint="@null"
                android:layout_margin="3dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btndiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_round"
                app:backgroundTint="@null"
                android:text="@string/_div"
                android:onClick="onoperator"
                android:textSize="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1.3"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:layout_margin="3dp"
            android:text="@string/_4"
            android:onClick="ondigit"
            android:background="@drawable/button_round"
            app:backgroundTint="@null"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:textSize="40dp"
            android:layout_margin="3dp"
            android:onClick="ondigit"
            app:backgroundTint="@null"
            android:background="@drawable/button_round"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:text="6"
            android:background="@drawable/button_round"
            android:onClick="ondigit"
            app:backgroundTint="@null"
            android:layout_margin="3dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnmul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_round"
            app:backgroundTint="@null"
            android:text="@string/_mul"
            android:onClick="onoperator"
            android:textSize="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1.3"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:layout_margin="3dp"
            android:text="@string/_1"
            android:onClick="ondigit"
            android:background="@drawable/button_round"
            app:backgroundTint="@null"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:onClick="ondigit"
            android:text="@string/_2"
            android:textSize="40dp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:text="@string/_3"
            android:background="@drawable/button_round"
            android:onClick="ondigit"
            app:backgroundTint="@null"
            android:layout_margin="3dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnmin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_round"
            app:backgroundTint="@null"
            android:text="@string/_min"
            android:onClick="onoperator"
            android:textSize="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1.3"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:onClick="ondigit"
            android:text="@string/_0"
            android:textSize="40dp"
            app:backgroundTint="@null" />


        <Button
            android:id="@+id/btndec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:onClick="ondecimal"
            android:text="@string/dec"
            android:textSize="40dp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnclr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:text="@string/c"
            android:background="@drawable/button_round"
            android:onClick="onclear"
            app:backgroundTint="@null"
            android:layout_margin="3dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnadd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_round"
            app:backgroundTint="@null"
            android:text="@string/_add"
            android:onClick="onoperator"
            android:textSize="40dp"
            android:layout_margin="2dp"
            android:layout_weight="1.3"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="300dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnequal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:layout_margin="3dp"
            android:text="@string/equal"
            android:onClick="onequal"
            android:background="@drawable/button_round"
            app:backgroundTint="@null"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>